--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
 #server.port=9618
-spring.data.mongodb.uri=mongodb+srv://nahushjavarnd:Nraw%4012345@cluster1.oobwds6.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@cluster1.oobwds6.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database= shortdb
